<resources>

    //guest SCREEN
    <string name="app_name">Powertall</string>
    <string name="standart">STANDAARD:</string>
    <string name="helemal">HELEMAAL GRATIS EN ZONDER</string>
    <string name="regiser">REGISTRATIE.</string>
    <string name="start">Start nu</string>
    <string name="gevorder">GEVORDERD:</string>
    <string name="voormar">UW EIGEN ACCOUNT VOOR MAAR</string>
    <string name="euro">€</string>
    <string name="perjar">€ 7,99 PER JAAR.</string>
    <string name="login">Inloggen</string>
    <string name="engel">Engels</string>
    <string name="netherland">Nederlands</string>
    <string name="nl">NL</string>
    <string name="en">EN</string>

    // home screen
    <string name="laren">Laren</string>
    <string name="overtype">Overtypen</string>
    <string name="welke">Welke taalcombinatie Kiest u?</string>
    <string name="clickop">klick op een van de onderstaande Knoppen</string>
    <string name="mijn">Mijn Profile</string>

    // Laren screen
    <string name="home">Home</string>
    <string name="help">Over Ons</string>
    <string name="contact">Contact</string>
    <string name="english">English</string>
    <string name="automatic">Automtatisch herhalen</string>
    <string name="stop">Stopen</string>


    // overtyper screen
    <string name="vul">Vul u naam in</string>
    <string name="naam">Naam</string>
    <string name="volgende">Volgende...</string>
    <string name="username">Username</string>

    // game screen
    <string name="research">Research</string>
    <string name="verbergen">Verbergen</string>
    <string name="drukop">Druk op[Enter]</string>

    // winner screen
    <string name="woord">Woord Winnaar</string>
    <string name="opni">Opnieuw</string>
    <string name="scoreboard">SCOREBOARD</string>

    // login screen
    <string name="vuljeemail">Vul je e-mail in an wachtwoord</string>
    <string name="register">Registreren</string>
    <string name="email">Enter your email</string>
    <string name="pass">Enter your password</string>

    <string name="agora_app_id">803ee533ef354f02b67f9a8dd827e3ca</string>

    <string name="agora_access_token">007eJxTYLht6HtY6qTAyvvvQzo29XzX+xFXYfMtoXxWx3KO8/V79mcrMFgYGKemmhobp6YZm5qkGRglmZmnWSZapKRYGJmnGicnfrNTSS6boJrc27GQmZEBAkF8doayzGyX1Nx8BgYAfDMkRw==</string>


</resources>