<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"

            android:scrollbars="none">


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:padding="10dp">

                <androidx.cardview.widget.CardView
                    android:id="@+id/loren_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bottombackcolor"
                        android:orientation="vertical"
                        android:padding="15dp">


                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:text="@string/english"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginRight="10dp"
                                android:paddingLeft="10dp"
                                android:textColor="@color/txtcolor"
                                android:layout_weight="1.8"
                                android:background="@drawable/ascentback"
                                android:singleLine="true"

                                />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:layout_weight=".2"
                                android:src="@drawable/sound" />

                        </LinearLayout>

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginLeft="5dp"
                            android:layout_marginTop="20dp"
                            android:text="@string/netherland"
                            android:textColor="@color/white" />

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="5dp"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <EditText
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_gravity="center_horizontal"
                                android:layout_marginRight="10dp"
                                android:layout_weight="1.8"
                                android:paddingLeft="10dp"
                                android:textColor="@color/txtcolor"
                                android:background="@drawable/ascentback"
                                android:singleLine="true"

                                />

                            <ImageView
                                android:layout_width="0dp"
                                android:layout_height="30dp"
                                android:layout_marginLeft="10dp"
                                android:layout_weight=".2"
                                android:src="@drawable/sound" />

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="20dp"
                            android:orientation="horizontal"
                            android:weightSum="2">


                            <ProgressBar
                                android:id="@+id/progress"
                                style="?android:attr/progressBarStyleHorizontal"
                                android:layout_width="0dp"
                                android:layout_height="20dp"
                                android:layout_gravity="center_vertical"
                                android:layout_marginRight="5dp"
                                android:layout_weight="1.1"
                                android:indeterminate="false"
                                android:indeterminateTint="@color/orange"
                                android:indeterminateTintMode="src_atop"

                                android:max="100"
                                android:minWidth="200dp"
                                android:minHeight="50dp"
                                android:progress="20" />

                            <CheckBox
                                android:id="@+id/checkBox"
                                android:layout_width="0dp"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="5dp"
                                android:layout_weight=".9"
                                android:text="@string/automatic"
                                android:textColor="@color/white"
                                android:textSize="10sp"
                                app:buttonTint="@color/colorAccent"
                                app:layout_constraintStart_toStartOf="parent"
                                app:layout_constraintTop_toTopOf="parent" />

                        </LinearLayout>

                        <Button
                            android:id="@+id/stopbtn"
                            android:layout_width="150dp"
                            android:layout_height="30dp"
                            android:layout_marginTop="20dp"
                            android:background="@drawable/btnback"
                            android:fontFamily="@font/fontbold"
                            android:text="@string/stop"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>

                <LinearLayout
                    android:id="@+id/overtypen_card"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:fontFamily="@font/fontbold"
                        android:layout_gravity="center_horizontal"
                        android:text="@string/vul"
                        android:textColor="@color/white" />

                <androidx.cardview.widget.CardView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    app:cardCornerRadius="10dp"
                    app:cardElevation="5dp"
                    android:layout_marginTop="20dp"
                    app:cardPreventCornerOverlap="true"
                    app:cardUseCompatPadding="true">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@color/bottombackcolor"
                        android:orientation="vertical"
                        android:padding="15dp">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_gravity="center_horizontal"
                            android:text="@string/naam"
                            android:fontFamily="@font/fontmedium"
                            android:textColor="@color/white" />

                        <EditText
                            android:layout_width="match_parent"
                            android:layout_height="30dp"
                            android:layout_gravity="center_horizontal"
                           android:layout_marginTop="20dp"
                            android:textColor="@color/txtcolor"
                            android:hint="@string/username"
                            android:gravity="center"
                            android:layout_weight="1.8"
                            android:background="@drawable/ascentback"
                            android:singleLine="true"

                            />



                        <Button
                            android:id="@+id/volgendebtn"
                            android:layout_width="220dp"
                            android:layout_height="wrap_content"
                            android:layout_marginTop="30dp"
                            android:layout_gravity="center_horizontal"
                            android:background="@drawable/btnback"
                            android:fontFamily="@font/fontbold"
                            android:text="@string/volgende"
                            android:textAllCaps="false"
                            android:textColor="@color/white" />


                    </LinearLayout>

                </androidx.cardview.widget.CardView>
                </LinearLayout>


            </LinearLayout>
        </ScrollView>
    </LinearLayout>
</layout>